--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cordova-browser": "6.0.0",
     "cordova-ios": "^5.0.1",
     "core-js": "^2.5.4",
+    "jquery": "^3.4.1",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
